# goit-pythonweb-hw-08

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/core/: logger.py
src/database/: db.py  models.py
src/repository/: contacts.py
